Fix error page on Mobile

--- a/css/style.css
+++ b/css/style.css
@@ -423,6 +423,20 @@ input:checked + .slider:before {
 		padding-left: 0%;
 	}
 
+	.error {
+		background: rgb(0, 2, 139);
+		margin: 0%;
+		grid-column-start: 2;
+		line-height: 1.5rem;
+		font-family: monospace;
+		color: white;
+		z-index: 5;
+		position: absolute;
+		top: 0%;
+		left: 0;
+		width: 100%;
+		height: 100%;
+	}
 	footer {
 		padding: 0px 5% 0px 5%;
 	}
